# Harmful-Brain-Activity-Classification-Competition

./: README.md  pyproject.toml
exploring_eeg/: eeg.ipynb
